Medium, Array/DFS